--- a/author/cpm/Makefile
+++ b/author/cpm/Makefile
@@ -2,10 +2,10 @@ help: ## show this text
 	# from http://postd.cc/auto-documented-makefile/
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
-IMAGE_NAME = cpanm-packer
+IMAGE_NAME = cpm-packer
 
 .PHONY: all
-all: cpanm cpanm.bat
+all: cpm cpm.bat
 
 .PHONY: image
 image: .image.exists ## build docker image of packing environment
@@ -19,23 +19,23 @@ image: .image.exists ## build docker image of packing environment
 	docker run --name $(IMAGE_NAME)-tmp $(IMAGE_NAME) perl build.pl
 	touch .container.exists
 
-cpanm: .container.exists ## generate fat-packed cpanm
-	docker cp $(IMAGE_NAME)-tmp:/tmp/cpanm/cpanm cpanm
+cpm: .container.exists ## generate fat-packed cpm
+	docker cp $(IMAGE_NAME)-tmp:/tmp/cpm/cpm cpm
 
-cpanm.bat: .container.exists ## generate fat-packed cpanm batch file
-	docker cp $(IMAGE_NAME)-tmp:/tmp/cpanm/cpanm.bat cpanm.bat
+cpm.bat: .container.exists ## generate fat-packed cpm batch file
+	docker cp $(IMAGE_NAME)-tmp:/tmp/cpm/cpm.bat cpm.bat
 
 .PHONY: update
 update: .image.exists ## download dependencies and update cpanfile.snapshot
 	-docker rm $(IMAGE_NAME)-update
 	docker run --name $(IMAGE_NAME)-update $(IMAGE_NAME) \
 		sh -c "rm -f cpanfile.snapshot && rm -rf local && carton install"
-	docker cp $(IMAGE_NAME)-update:/tmp/cpanm/cpanfile.snapshot cpanfile.snapshot
+	docker cp $(IMAGE_NAME)-update:/tmp/cpm/cpanfile.snapshot cpanfile.snapshot
 
 .PHONY: install
 install: all ## installs into the bin directory of this repository
-	cp cpanm ../../bin/
-	cp cpanm.bat ../../bin/
+	cp cpm ../../bin/
+	cp cpm.bat ../../bin/
 
 .PHONY: clean
 clean:
