introduce Environment Files
see https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#environment-files

--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: setup host perl
-        run: perl -MConfig -E 'say "::add-path::$Config{bin}"'
+        run: perl -MConfig -E 'say "$Config{bin}"' >> $GITHUB_PATH
       - name: Host perl -V
         run: perl -V
       - name: gcc --version
