--- a/.github/workflows/update-build-tools.yml
+++ b/.github/workflows/update-build-tools.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.SHOGO_GITHUB_TOKEN }}
+          fetch-depth: 0
       - name: cleanup
         run: |
           rm -f scripts/linux/cpanfile.snapshot
