--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
           - ubuntu-18.04
           - ubuntu-16.04
           - windows-2019
+          - macos-11.0
           - macos-10.15
         dist:
           - default
