--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -98,7 +98,7 @@ jobs:
         env:
           PERL_VERSION: ${{ matrix.perl }}
           PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
-          # PERL_DL_DEBUG: "10" # enables debugging
+          PERL_DL_DEBUG: "10" # enables debugging
         working-directory: ./scripts/windows
 
       # for debugging
