--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -19,9 +19,6 @@ on:
         required: false
         default: ""
 
-env:
-  OPENSSL_VERSION: "1_1_1h"
-
 jobs:
   list:
     runs-on: ubuntu-latest
@@ -49,30 +46,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up MSYS2
-        uses: msys2/setup-msys2@v2
+      - uses: msys2/setup-msys2@v2
         with:
           install: make mingw-w64-x86_64-gcc nasm
-
-      - id: cache-path
-        name: Get Cache Path
-        run: |
-          echo "::set-output name=openssh-path::$(cygpath --windows --absolute "./openssl-OpenSSL_$OPENSSL_VERSION")"
-        shell: "msys2 {0}"
-      - name: restore cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ${{ steps.cache-path.outputs.openssh-path }}
-          key: openssh-${{ runner.os }}-${{ env.OPENSSL_VERSION }}
-
       - name: install OpenSSL
         run: |
           set -eux
-          if [[ ! -d "openssl-OpenSSL_$OPENSSL_VERSION" ]]; then
-            curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
-            tar xzf openssl.tar.gz
-          fi
+          OPENSSL_VERSION=1_1_1h
+          curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
+          tar xzf openssl.tar.gz
           cd "openssl-OpenSSL_$OPENSSL_VERSION"
           perl Configure --prefix="$(cygpath "$RUNNER_TOOL_CACHE\perl\${{ matrix.perl }}\x64")" mingw64
           make "-j$(nproc)"
