--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -24,6 +24,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: sanity check
+        run: |
+          perl -c scripts/lib/Devel/PatchPerl/Plugin/GitHubActions.pm
+          perl -c scripts/lib/Devel/PatchPerl/Plugin/MinGW.pm
+          perl -c scripts/lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
+          perl -c scripts/darwin/build.pl
+        env:
+          PERL5LIB: ${{ github.workspace }}/scripts/lib
       - id: set-matrix
         name: list available perl versions
         run: |
