--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -24,12 +24,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: scripts/darwin/local
+          key: ${{ runner.os }}-sanity-check-${{ hashFiles('scripts/darwin/cpanfile.snapshot') }}
       - name: sanity check
         run: |
-          perl -c scripts/lib/Devel/PatchPerl/Plugin/GitHubActions.pm
-          perl -c scripts/lib/Devel/PatchPerl/Plugin/MinGW.pm
-          perl -c scripts/lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
-          perl -c scripts/darwin/build.pl
+          ../../bin/carton install --deployment
+          ../../bin/carton exec perl -c build.pl
+        working-directory: ./scripts/darwin
         env:
           PERL5LIB: ${{ github.workspace }}/scripts/lib
       - id: set-matrix
