--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -24,14 +24,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: scripts/windows/local
+          key: ${{ runner.os }}-sanity-check-${{ hashFiles('scripts/windows/cpanfile.snapshot') }}
       - name: sanity check
         run: |
-          perl -c scripts/lib/Devel/PatchPerl/Plugin/GitHubActions.pm
-          perl -c scripts/lib/Devel/PatchPerl/Plugin/MinGW.pm
-          perl -c scripts/lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
-          perl -c scripts/widows/build.pl
-        env:
-          PERL5LIB: ${{ github.workspace }}/scripts/lib
+          ../../bin/carton install --deployment
+          ../../bin/carton exec perl -c build.pl
+        working-directory: ./scripts/windows
       - id: set-matrix
         name: list available perl versions
         run: |
