change install path if ithread is enabled (#485)
* change install path if ithread is enabled

installed perl binary might be cached.
Change the path to avoid getting the wrong cache.

* fix tool path

* fix syntax error

* add sanity check

* fix format

* add test for threaded perl on windows

* fix sanity check script

* install deps

* change the minimum perl version to v5.26.1

--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -24,6 +24,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: scripts/darwin/local
+          key: ${{ runner.os }}-sanity-check-${{ hashFiles('scripts/darwin/cpanfile.snapshot') }}
+      - name: sanity check
+        run: |
+          ../../bin/carton install --deployment
+          ../../bin/carton exec perl -c build.pl
+        working-directory: ./scripts/darwin
+        env:
+          PERL5LIB: ${{ github.workspace }}/scripts/lib
       - id: set-matrix
         name: list available perl versions
         run: |
