--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -24,6 +24,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: scripts/windows/local
+          key: ${{ runner.os }}-sanity-check-${{ hashFiles('scripts/windows/cpanfile.snapshot') }}
+      - name: sanity check
+        run: |
+          ../../bin/carton install --deployment
+          ../../bin/carton exec perl -c build.pl
+        working-directory: ./scripts/windows
       - id: set-matrix
         name: list available perl versions
         run: |
