--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,6 +24,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: scripts/linux/local
+          key: ${{ runner.os }}-sanity-check-${{ hashFiles('scripts/linux/cpanfile.snapshot') }}
+      - name: sanity check
+        run: |
+          ../../bin/carton install --deployment
+          ../../bin/carton exec perl -c build.pl
+        working-directory: ./scripts/linux
+        env:
+          PERL5LIB: ${{ github.workspace }}/scripts/lib
       - id: set-matrix
         name: list available perl versions
         run: |
