--- a/author/cpanm/Dockerfile
+++ b/author/cpanm/Dockerfile
@@ -1,3 +1,5 @@
+# Dockerfile for fatpacking environment
+
 FROM alpine:latest
 
 # build perl
@@ -6,16 +8,10 @@ RUN apk add --no-cache gcc libc-dev curl perl patch make wget
 RUN curl --compressed -sSL https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build | perl - 5.8.8 /opt/perl-5.8/
 
 # do not remove gcc and libc-dev because some cpan modules need them
-RUN apk del perl patch
+RUN apk del perl
 
 ENV PATH=/opt/perl-5.8/bin:$PATH
 RUN curl --compressed -sSL https://cpanmin.us/ | perl - --notest App::FatPacker::Simple Carton ExtUtils::PL2Bat
 
 RUN mkdir -p /tmp/cpanm
 WORKDIR /tmp/cpanm
-
-COPY cpanfile .
-COPY build.pl .
-COPY cpanfile.snapshot .
-
-RUN carton install --deployment
