fix OpenSSL install path

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -166,7 +166,7 @@ jobs:
           curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
           tar xzf openssl.tar.gz
           cd "openssl-OpenSSL_$OPENSSL_VERSION"
-          perl Configure --prefix="$(cygpath "$RUNNER_TOOL_CACHE\perl\${{ matrix.perl }}\x64")" mingw64
+          perl Configure --prefix="$(cygpath "$RUNNER_TOOL_CACHE\perl\${{ matrix.perl }}-thr\x64")" mingw64
           make "-j$(nproc)"
           make install_sw
         shell: "msys2 {0}"
