--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -54,6 +54,7 @@ jobs:
   build:
     runs-on: macos-10.15
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
@@ -100,6 +101,7 @@ jobs:
   build-multi-thread:
     runs-on: macos-10.15
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
