--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -54,6 +54,7 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
@@ -93,6 +94,7 @@ jobs:
   build-multi-thread:
     runs-on: ubuntu-18.04
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
