--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -52,6 +52,7 @@ jobs:
   build:
     runs-on: windows-2019
     needs: list
+    timeout-minutes: 25
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
@@ -152,6 +153,7 @@ jobs:
   build-multi-thread:
     runs-on: windows-2019
     needs: list
+    timeout-minutes: 25
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
