add patch for v5.6.x on macOS (#496)
* add patch for v5.6.x on macOS

* fix v5.6.2

* define $version

* update darwin.json for testing

* fix v5.8.0

* oops, fix the path of the version list

* compile check for Devel::PatchPerl::Plugin::GitHubActions

* fix: Cruising for prototypes

* fix compile errors

* fix v5.8.0

* fix v5.8.0

* fix v5.8.0

* fix a rejected hunk

* fix C symbol checker

* fix v5.8.1

* install problem matcher

* fix i_stdlib definition

* import issue_command

* fix v5.8.0

* fix filename

* fix v5.6.x

* fix v5.8.0

* fix filenames

* fix sanity checks

* fix v5.6.2

* fix v5.6.2

* fix v5.8.0

* fix v5.6.2

* fix v5.6.2

* fix v5.6.2

* set timeout

* show debug log

* fix v5.6.2

* fix v5.6.2

* fix filename

* fix guessing pointer size

* fix v5.6.2

* fix v5.6.2

* remove v5.8.x for testing

* fix void type checking

* fix time not found on v5.6.2

* fix unexpected end of file

* fix detecting byte order on v5.6.2

* fix v5.6.2

* fix v5.6.2

* add _patch_perl_h

* show rejected file

* remove rejected hunk

* fix v5.6.1

* fix v5.6.1

* fix v5.6.0

* fix v5.6.0

* upload Configure for debugging

* fix v5.6.0

* debug

* fix v5.6.0

* fix v5.6.0

* #include <unistd.h>

* remove debug codes

* revert changes versions

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -32,6 +32,9 @@ jobs:
         run: |
           ../../bin/carton install --deployment
           ../../bin/carton exec perl -c build.pl
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/GitHubActions.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGW.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
         working-directory: ./scripts/windows
       - id: set-matrix
         name: list available perl versions
@@ -49,6 +52,7 @@ jobs:
   build:
     runs-on: windows-2019
     needs: list
+    timeout-minutes: 25
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
@@ -149,6 +153,7 @@ jobs:
   build-multi-thread:
     runs-on: windows-2019
     needs: list
+    timeout-minutes: 25
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
