--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -32,6 +32,9 @@ jobs:
         run: |
           ../../bin/carton install --deployment
           ../../bin/carton exec perl -c build.pl
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/GitHubActions.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGW.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
         working-directory: ./scripts/darwin
         env:
           PERL5LIB: ${{ github.workspace }}/scripts/lib
@@ -41,7 +44,7 @@ jobs:
           if [ -n "$PERL_VERSIONS" ]; then
             echo "::set-output name=matrix::$(printenv PERL_VERSIONS | jq -c '{perl: .}')"
           else
-            echo "::set-output name=matrix::$(cat versions/linux.json | jq -c '{perl: .}')"
+            echo "::set-output name=matrix::$(cat versions/darwin.json | jq -c '{perl: .}')"
           fi
         env:
           PERL_VERSIONS: ${{ github.event.inputs.perl-versions }}
@@ -51,6 +54,7 @@ jobs:
   build:
     runs-on: macos-10.15
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
@@ -97,6 +101,7 @@ jobs:
   build-multi-thread:
     runs-on: macos-10.15
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
