--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -32,6 +32,9 @@ jobs:
         run: |
           ../../bin/carton install --deployment
           ../../bin/carton exec perl -c build.pl
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/GitHubActions.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGW.pm
+          ../../bin/carton exec perl -I../lib -c ../lib/Devel/PatchPerl/Plugin/MinGWGNUmakefile.pm
         working-directory: ./scripts/linux
         env:
           PERL5LIB: ${{ github.workspace }}/scripts/lib
@@ -51,6 +54,7 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
@@ -90,6 +94,7 @@ jobs:
   build-multi-thread:
     runs-on: ubuntu-18.04
     needs: list
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.list.outputs.matrix)}}
