--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -25,6 +25,9 @@ jobs:
           - "5.6.2"
           - "5.6.1"
           - "5.6.0" # oldest version the action supports
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Set Node.js 12.x
         uses: actions/setup-node@v1
