--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+      - run: npm ci
       - run: npm run build
 
       - name: use the action
