npm run package

--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: 12.x
       - run: npm ci
-      - run: npm run build
+      - run: npm run package
 
       - name: use the action
         uses: ./
